--- a/JavaScript/Practica-Cargar-Img/index.html
+++ b/JavaScript/Practica-Cargar-Img/index.html
@@ -7,6 +7,6 @@
     <title>Mostrar Imagen random</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 </html>
