--- a/JavaScript/Practica-Cargar-Img/index.html
+++ b/JavaScript/Practica-Cargar-Img/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostrar Imagen random</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <script src="js/script2.js"></script>
+    <script src="js/script4.js"></script>
 </body>
 </html>
