--- a/JavaScript/Simpsons/index.html
+++ b/JavaScript/Simpsons/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MANEJO-DOM.SIN HOJA ESTILO</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div class="classMuestra"></div>
+
+    <p id="puntos"></p>
+
     <div class="container">
         <div class="gallery">
-         
+            
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script1.js"></script>
 </body>
 </html>
