--- a/JavaScript/APIS/Tarea-4-16-Otc/index.html
+++ b/JavaScript/APIS/Tarea-4-16-Otc/index.html
@@ -80,6 +80,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
